# ngspice-meson

./: README.md  meson.build  meson_options.txt
src/: meson.build
src/ciderlib/: meson.build
src/ciderlib/input/: meson.build
src/ciderlib/oned/: meson.build
src/ciderlib/support/: meson.build
src/ciderlib/twod/: meson.build
src/frontend/: meson.build
src/frontend/numparam/: meson.build
src/frontend/parser/: meson.build
src/frontend/plotting/: meson.build
src/frontend/trannoise/: meson.build
src/include/: meson.build
src/include/ngspice/: meson.build
src/maths/: meson.build
src/maths/cmaths/: meson.build
src/maths/dense/: meson.build
src/maths/deriv/: meson.build
src/maths/fft/: meson.build
src/maths/misc/: meson.build
src/maths/ni/: meson.build
src/maths/poly/: meson.build
src/maths/sparse/: meson.build
src/misc/: meson.build
src/osdi/: meson.build
src/spicelib/: meson.build
src/spicelib/analysis/: meson.build
src/spicelib/devices/: meson.build
src/spicelib/devices/asrc/: meson.build
src/spicelib/devices/bjt/: meson.build
src/spicelib/devices/bsim1/: meson.build
src/spicelib/devices/bsim2/: meson.build
src/spicelib/devices/bsim3/: meson.build
src/spicelib/devices/bsim3soi_dd/: meson.build
src/spicelib/devices/bsim3soi_fd/: meson.build
src/spicelib/devices/bsim3soi_pd/: meson.build
src/spicelib/devices/bsim3v0/: meson.build
src/spicelib/devices/bsim3v1/: meson.build
src/spicelib/devices/bsim3v32/: meson.build
src/spicelib/devices/bsim4/: meson.build
src/spicelib/devices/bsim4v5/: meson.build
src/spicelib/devices/bsim4v6/: meson.build
src/spicelib/devices/bsim4v7/: meson.build
src/spicelib/devices/bsimsoi/: meson.build
src/spicelib/devices/cap/: meson.build
src/spicelib/devices/cccs/: meson.build
src/spicelib/devices/ccvs/: meson.build
src/spicelib/devices/cpl/: meson.build
src/spicelib/devices/csw/: meson.build
src/spicelib/devices/dio/: Makefile.am  meson.build
src/spicelib/devices/hfet1/: meson.build
src/spicelib/devices/hfet2/: meson.build
src/spicelib/devices/hicum2/: meson.build
src/spicelib/devices/hisim2/: meson.build
src/spicelib/devices/hisimhv1/: meson.build
src/spicelib/devices/hisimhv2/: meson.build
src/spicelib/devices/ind/: meson.build
src/spicelib/devices/isrc/: meson.build
src/spicelib/devices/jfet/: meson.build
src/spicelib/devices/jfet2/: meson.build
src/spicelib/devices/ltra/: meson.build
src/spicelib/devices/mes/: meson.build
src/spicelib/devices/mesa/: meson.build
src/spicelib/devices/mos1/: meson.build
src/spicelib/devices/mos2/: meson.build
src/spicelib/devices/mos3/: meson.build
src/spicelib/devices/mos6/: meson.build
src/spicelib/devices/mos9/: meson.build
src/spicelib/devices/nbjt/: meson.build
src/spicelib/devices/nbjt2/: meson.build
src/spicelib/devices/ndev/: meson.build
src/spicelib/devices/numd/: meson.build
src/spicelib/devices/numd2/: meson.build
src/spicelib/devices/numos/: meson.build
src/spicelib/devices/res/: meson.build
src/spicelib/devices/soi3/: meson.build
src/spicelib/devices/sw/: meson.build
src/spicelib/devices/tra/: meson.build
src/spicelib/devices/txl/: meson.build
src/spicelib/devices/urc/: meson.build
src/spicelib/devices/vbic/: meson.build
src/spicelib/devices/vccs/: meson.build
src/spicelib/devices/vcvs/: meson.build
src/spicelib/devices/vdmos/: meson.build
src/spicelib/devices/vsrc/: meson.build
src/spicelib/parser/: meson.build
src/xspice/: meson.build
src/xspice/cm/: meson.build
src/xspice/cmpp/: meson.build
src/xspice/enh/: meson.build
src/xspice/evt/: meson.build
src/xspice/icm/: meson.build
src/xspice/idn/: meson.build
src/xspice/ipc/: meson.build
src/xspice/mif/: meson.build
