
libckt_srcs = files([
		'acan.c',
		'acaskq.c',
		'acsetp.c',
		'analysis.c',
		'analysis.h',
		'cktacct.c',
		'cktacdum.c',
		'cktaskaq.c',
		'cktasknq.c',
		'cktbkdum.c',
		'cktclrbk.c',
		'cktdelt.c',
		'cktdest.c',
		'cktdisto.c',
		'cktdlti.c',
		'cktdltm.c',
		'cktdltn.c',
		'cktdojob.c',
		'cktdump.c',
		'cktncdump.c',
		'cktfbran.c',
		'cktfnda.c',
		'cktfndm.c',
		'cktfnode.c',
		'cktftask.c',
		'cktgrnd.c',
		'ckti2nod.c',
		'cktic.c',
		'cktlnkeq.c',
		'cktload.c',
		'cktmapn.c',
		'cktmask.c',
		'cktmcrt.c',
		'cktmkcur.c',
		'cktmknod.c',
		'cktmkvol.c',
		'cktmpar.c',
		'cktnames.c',
		'cktnewan.c',
		'cktneweq.c',
		'cktnewn.c',
		'cktnodn.c',
		'cktnoise.c',
		'cktntask.c',
		'cktnum2n.c',
		'cktop.c',
		'cktparam.c',
		'cktpmnam.c',
		'cktpname.c',
		'cktpzld.c',
		'cktpzset.c',
		'cktpzstr.c',
		'cktsens.c',
		'cktsetap.c',
		'cktsetbk.c',
		'cktsetnp.c',
		'cktsetup.c',
		'cktsgen.c',
		'cktsopt.c',
		'cktspnoise.c',
		'ckttemp.c',
		'cktterr.c',
		'ckttroub.c',
		'ckttrunc.c',
		'ckttyplk.c',
		'daskq.c',
		'dcoaskq.c',
		'dcop.c',
		'dcosetp.c',
		'dctaskq.c',
		'dctran.c',
		'dctrcurv.c',
		'dctsetp.c',
		'distoan.c',
		'dkerproc.c',
		'dloadfns.c',
		'dsetparm.c',
		'naskq.c',
		'nevalsrc.c',
		'ninteg.c',
		'noisean.c',
		'noisesp.c',
		'nsetparm.c',
		'optran.c',
        'com_optran.h',
		'pzan.c',
		'pzaskq.c',
		'pzsetp.c',
		'sensaskq.c',
		'senssetp.c',
		'tfanal.c',
		'tfaskq.c',
		'tfsetp.c',
		'tranaskq.c',
		'traninit.c',
		'transetp.c',
		'cluster.c',
])

if enable_pss
	libckt_srcs += files([
		'dcpss.c',
		'pssaskq.c',
		'pssinit.c',
		'psssetp.c',
	])
endif

if enable_sp
	libckt_srcs += files([
		'cktspdum.c',
		'span.c',
		'spaskq.c',
		'spsetp.c'
	])
endif

libckt = static_library(
	'ckt',
	libckt_srcs,
	include_directories: [
		root_inc, spicelib_devs_inc
	],
	install: false,
)
