
libbjt_srcs = files([
	'bjt.c',
	'bjtacld.c',
	'bjtask.c',
	'bjtconv.c',
	'bjtdefs.h',
	'bjtdel.c',
	'bjtdisto.c',
	'bjtdset.c',
	'bjtdset.h',
	'bjtext.h',
	'bjtgetic.c',
	'bjtinit.c',
	'bjtinit.h',
	'bjtitf.h',
	'bjtload.c',
	'bjtmask.c',
	'bjtmpar.c',
	'bjtnoise.c',
	'bjtparam.c',
	'bjtpzld.c',
	'bjtsacl.c',
	'bjtsetup.c',
	'bjtsload.c',
	'bjtsoachk.c',
	'bjtsprt.c',
	'bjtsset.c',
	'bjtsupd.c',
	'bjttemp.c',
	'bjttrunc.c',
])

libbjt = static_library(
	'bjt',
	libbjt_srcs,
	include_directories: [ root_inc ],
	install: false,
)
